# ekke-webshop-backend/routes/user-address.route.ts
@@ -7,9 +7,14 @@ const router = express.Router();
 
 router.get("/get-all-user-addresses", addressController.getAllUserAddresses);
 
+router.get(
+  "/get-user-address-by-user-id",
+  addressController.getUserAddressByUserId
+);
+
 router.post("/add-user-address", addressController.createUserAddress);
 
-router.post("/edit-user-address/:id", addressController.editUserAddress);
+router.post("/edit-user-address", addressController.editUserAddress);
 
 router.delete("/delete-user-address/:id", addressController.deleteUserAddress);
 
